fixed css for alignment of cards

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@
 .card-container {
   position: relative;
   width: 80%;
-  height: 700px;
+  height: 650px;
 }
 
 #card-container div {
@@ -135,7 +135,8 @@
 }
 
 [id='1'] .card-div {
-  transform: scale(.9) translate3d(120%, -45%, 0);
+  transform: scale(.9) translate3d(64.5%, -85%, 0);
+  /* transform: scale(.9) translate3d(120%, -45%, 0); */
   transition: transform 1s; 
   position: absolute;
 }
@@ -145,7 +146,8 @@
 }
 
 [id='2'] .card-div {
-  transform: scale(.95) translate3d(65%, -15%, 0);
+  transform: scale(.95) translate3d(12.5%, -52%, 0);
+  /* transform: scale(.95) translate3d(65%, -15%, 0); */
   transition: transform 1s;
   position: absolute;
 }
@@ -155,7 +157,8 @@
 }
 
 [id='3'] .card-div {
-  transform: scale(1) translate3d(0%, 10%, 0);
+  transform: scale(1) translate3d(-50%, -22%, 0);
+  /* transform: scale(1) translate3d(0%, 10%, 0); */
   transition: transform 1s;
   position: absolute;
 }
@@ -165,7 +168,8 @@
 }
 
 [id='4'] .card-div {
-  transform: scale(.95) translate3d(-65%, -15%, 0);
+  transform: scale(.95) translate3d(-117.5%, -52%, 0);
+  /* transform: scale(.95) translate3d(-65%, -15%, 0); */
   transition: transform 1s;
   position: absolute;
 }
@@ -175,7 +179,8 @@
 }
 
 [id='5'] .card-div {
-  transform: scale(.9) translate3d(-120%, -45%, 0);
+  transform: scale(.9) translate3d(-175.5%, -85%, 0);
+  /* transform: scale(.9) translate3d(-120%, -45%, 0); */
   transition: transform 1s;
   position: absolute;
 }
@@ -185,7 +190,7 @@
 }
 
 [id='6'] .card-div {
-  transform: scale(.8) translate3d(-70%, -95%, 0);
+  transform: scale(.8) translate3d(-132.5%, -130%, 0);
   transition: transform 1s;
   position: absolute;
 }
@@ -195,7 +200,7 @@
 }
 
 [id='7'] .card-div {
-  transform: scale(.8) translate3d(0%, -115%, 0);
+  transform: scale(.8) translate3d(-62.5%, -147%, 0);
   transition: transform 1s;
   position: absolute;
 }
@@ -205,7 +210,8 @@
 }
 
 [id='8'] .card-div {
-  transform: scale(.8) translate3d(70%, -95%, 0);
+  transform: scale(.8) translate3d(7.5%, -130%, 0);
+  /* transform: scale(.8) translate3d(70%, -95%, 0); */
   transition: transform 1s;
   position: absolute;
 }
